# CMakeList.txt : CMake project for ObsidianGameTools, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.11)

# Add source to this project's executable.
add_executable (ObsidianGameTools "ObsidianGameTools.cpp" )

# TODO: Add tests and install targets if needed.
